[gd_scene load_steps=6 format=3 uid="uid://blbjcsfqhkvrh"]

[ext_resource type="Texture2D" uid="uid://bksw1cbajgo3q" path="res://Assets/node_bg.png" id="1_yhfcn"]
[ext_resource type="Script" path="res://Scripts/visual_node.gd" id="2_uqqgy"]
[ext_resource type="PackedScene" uid="uid://c8wvcvhe4eu1a" path="res://Scenes/connector_point.tscn" id="3_hvodk"]

[sub_resource type="LabelSettings" id="LabelSettings_t58mr"]
font_size = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yjnu"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.804743, 0.804743, 0.804743, 1)

[node name="VisualNode" type="NinePatchRect"]
texture_filter = 1
custom_minimum_size = Vector2(448, 160)
offset_right = 448.0
offset_bottom = 160.0
mouse_filter = 1
texture = ExtResource("1_yhfcn")
region_rect = Rect2(0, 0, 240, 240)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_uqqgy")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 355.0
offset_bottom = 80.0
text = "Random Ass Text"
label_settings = SubResource("LabelSettings_t58mr")

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 355.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_4yjnu")
placeholder_text = "Insert Text Here"
wrap_mode = 1

[node name="ConnectorPoint" parent="." instance=ExtResource("3_hvodk")]
layout_mode = 2
offset_left = 404.0
offset_top = 40.0
offset_right = 447.0
offset_bottom = 83.0
sending = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 43.0
offset_bottom = 169.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
